# trilha-python-dio

./: README.md
00 - Fundamentos/: sistema_bancario.py
01 - Estruturas de dados/: sistema_bancario.py
02 - Programação Orientada a Objetos/: sistema_bancario.py
03 - Utilizando Bancos de Dados Relacionais/: dbapi.py
04 - WORKOUT API/: exemplo.py
04 - WORKOUT_API/: Makefile  requirements.txt
04 - WORKOUT_API/alembic/: env.py
04 - WORKOUT_API/alembic/versions/: 147218a8160f_init_db.py  21d5ab207011_init_db.py  42f384e47c36_init_db.py  4bb44c7157e6_init_db.py  50c35f93451b_init_db.py  68c086e71e90_init_db.py  d1f6761c7266_init_db.py
04 - WORKOUT_API/workout_api/: __init__.py  routers.py
04 - WORKOUT_API/workout_api/atleta/: AtletaModels.py  controller.py  models.py  schemas.py
04 - WORKOUT_API/workout_api/categorias/: CategoriaModels.py  controller.py  models.py  schemas.py
04 - WORKOUT_API/workout_api/centro_treinamento/: CTModels.py  controller.py  models.py  schemas.py
04 - WORKOUT_API/workout_api/configs/: database.py  settings.py
05 - TDD Project/: Makefile  pyproject.toml
05 - TDD Project/store/: main.py
05 - TDD Project/store/controllers/: product.py
05 - TDD Project/store/core/: exceptions.py
05 - TDD Project/store/models/: base.py
05 - TDD Project/store/schemas/: base.py  product.py
05 - TDD Project/store/usecases/: product.py
05 - TDD Project/tests/: conftest.py  factories.py
05 - TDD Project/tests/schemas/: test_product.py
05 - TDD Project/tests/usecases/: test_product.py
(+1 files in other folders)
