[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["Antônio Manetta <antonio.q.manetta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
motor = "^3.5.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
